# RAWG-Data-Pipeline

./: .gitignore  README.md  pyproject.toml
.circleci/: config.yml
airflow/: Dockerfile  app.py
data/: video_game_data.csv
dbt/: .user.yml  dbt_project.yml  profiles.yml
dbt/models/: monthly_releases.sql  popularity_by_genre.sql  yearly_releases.sql
prefect/: flow.py  prefect.yaml
src/: extract_data_from_api.py  load_storage_into_bigquery.py
src/utilities/: __init__.py  google_cloud_utils.py  rawg_api_utils.py
streamlit/: app.py
terraform/: main.tf
tests/: __init__.py  test_api_connection.py
